bitnami.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-blocked
  namespace: default
spec:
  containers:
    - name: nginx
      image: bitnami/nginx
