pod-docker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-dockerhub
spec:
  containers:
    - name: nginx
      image: nginx:latest
