postgresD.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-postgres
  namespace: default
spec:
  containers:
    - name: postgres
      image: postgres:15
      ports:
        - containerPort: 5432
